# inference_manager

./: .gitignore  .roomodes  README.md  base64_file.txt  docker-compose.yml  dockerfile  install.sh  main.py  pyproject.toml  requirements.txt  start.sh  start_all.bat  start_webui_forge.bat
.github/workflows/: ci.yml
automatic1111_save/: docker-compose-automatic1111.yml  docker_spec.md  dockerfile-automatic1111  start.sh
docs/: developer_guide.md  localAI_doc.md  mcp_doc.md
specs/: initial_spec.md  localai_spec.md  ollama_client.md  services_spec.md  tasks.md
src/models/: __init__.py  queues.py  schemas.py
src/routes/: mcp.py  tools.py
src/utils/: localai_client.py  ollama_client.py  stability_matrix_client.py
tests/: load_test.py  test_integration.py  test_main.py  test_ollama_client.py  test_queues.py  test_stability_matrix_client.py  test_youtube_thumbail.py  util.py
