[project]
name = "inference-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "hf-xet>=1.0.5",
    "locust>=2.36.2",
    "mcp[cli]>=1.6.0",
    "psutil>=7.0.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "python-multipart>=0.0.20",
]
